...
                title={resumeLabel}
                icon="play"
                progress={multiVideoProgressRatio}
                onPress={handleContinue}
                hasTVPreferredFocus={isPlatformTV}
                flex={buttonFlex}
                testID="media-play"
              />
            ) : (
              <Button
                title={playLabel}
                icon="play"
                variant="primary"
...
