...
                        size={theme.sizes.iconMedium}
                        color={theme.colors.mainForeground}
                      />
                    )}
                    {label && <Text variant="subheader">{label}</Text>}
                  </Box>
                  <Button icon="close" variant="tertiary" onPress={onClose} testID="modal-close" />
                </Box>
                {children}
              </Box>
            </Pressable>
          </TVFocusGuideView>
        </Box>
...
